--- a/resources/sass/templates/_table.scss
+++ b/resources/sass/templates/_table.scss
@@ -178,7 +178,7 @@
 					width: 25%;
 
 					@include phone {
-						width: 50%;
+						width: 55%;
 					}
 
 					.latest-post {
